# ledger-system

./: .gitignore  CLAUDE.md  test_db.py  台账报表.xlsx
ledger_system/: __init__.py  main.py  pyproject.toml
ledger_system/business/: __init__.py  code_generator.py
ledger_system/business/document/: __init__.py  document_manager.py  parser.py  watcher.py
ledger_system/business/learning/: __init__.py  diff_logger.py  feedback.py
ledger_system/business/nlp/: __init__.py  ai_service.py  rule_engine.py
ledger_system/business/procurement/: __init__.py  procurement_analyzer.py  procurement_import.py  re_analyze_procurement.py  rule_based_parser.py  sheet_parsers.py
ledger_system/business/report/: __init__.py  dashboard_generator.py  report_generator.py  report_sync.py  sync_categories_from_excel.py
ledger_system/config/: settings.yaml
ledger_system/data/: database.py
ledger_system/data/migrations/: 002_add_inbound_status_and_property_table.py  add_sequence_and_properties.py
ledger_system/data/models/: __init__.py  base.py  category.py  document_log.py  equipment_property.py  inbound.py  ledger.py  ledger_property.py  material_code.py  material_property.py  outbound.py  rule_learning.py
ledger_system/data/repository/: __init__.py  ledger_repo.py
ledger_system/program/: __init__.py  cli.py  exceptions.py
ledger_system/program/commands/: add.py  export.py  import_procurement_command.py  process.py  query.py  sync.py
ledger_system/rules/: local_rules.json
memory/: material-classification.md
warehouse-manager/: package-lock.json  package.json
(+44 files in other folders)
