[project]
name = "ledger-system"
version = "0.1.0"
description = "Construction site material/equipment inventory ledger system"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    "anthropic>=0.20.0",
    "requests>=2.31.0",
    "watchdog>=3.0.0",
    "python-dateutil>=2.8.0",
]

[project.scripts]
ledger = "ledger_system.main:main"